--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "newsletter-sign-up-with-success-message-main",
   "version": "1.0.0",
   "description": "frontend mentor project",
-  "main": "index.js",
+  "main": "main.ts",
   "scripts": {
     "test": "npm test"
   },
